force-app/main/default/objects/Timesheet_Entry__c/fields/Actual_Days_worked__c.field-meta.xml
<CustomField>
    <fullName>Actual_Days_worked__c</fullName>
    <formula>ROUND(Captured_Hours__c / 8, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Days worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>