force-app/main/default/objects/Timesheet_Entry__c/fields/Actual_Worked_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Worked_Days__c</fullName>
    <description>Actual days worked by the developer (if it differs from the scheduled days).</description>
    <label>Actual Worked Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>