force-app/main/default/objects/Timesheet_Entry__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks whether the timesheet has been approved.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>