force-app/main/default/objects/Timesheet_Entry__c/fields/Approved_Days__c.field-meta.xml
<CustomField>
    <fullName>Approved_Days__c</fullName>
    <label>Approved Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>