force-app/main/default/objects/Timesheet_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the work is billable.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>