force-app/main/default/objects/Timesheet_Entry__c/fields/Captured_Hours__c.field-meta.xml
<CustomField>
    <fullName>Captured_Hours__c</fullName>
    <label>Captured Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>