force-app/main/default/objects/Timesheet_Entry__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Optional field for any additional remarks regarding the timesheet entry.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>