force-app/main/default/objects/Timesheet_Entry__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The ending date of the timesheet period.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>