force-app/main/default/objects/Timesheet_Entry__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The starting date of the timesheet period.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>