force-app/main/default/objects/Timesheet_Entry__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description>Date and time when the timesheet was submitted.</description>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>