force-app/main/default/objects/Timesheet_Entry__c/fields/Worked_Days__c.field-meta.xml
<CustomField>
    <fullName>Worked_Days__c</fullName>
    <description>Total number of days the developer was scheduled to work during the timesheet period.</description>
    <label>Worked Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>