force-app/main/default/objects/Timesheet_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Resource__c</columns>
    <columns>Worked_Days__c</columns>
    <columns>Submitted_On__c</columns>
    <columns>Status__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>