force-app/main/default/objects/Timesheet_Entry__c/listViews/Current_Month_Timesheet.listView-meta.xml
<ListView>
    <fullName>Current_Month_Timesheet</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Captured_Hours__c</columns>
    <columns>Actual_Days_worked__c</columns>
    <filterScope>Mine</filterScope>
    <label>Current Month Timesheet</label>
</ListView>